--- a/vercel.json
+++ b/vercel.json
@@ -14,5 +14,8 @@
     ],
     "env": {
         "NODE_ENV": "production"
-    }
+    },
+    "rewrites": [
+        { "source": "/(.*)", "destination": "/" }
+    ]
 }
